test/corpus/errors.txt
================================================================================
Invalid unquoted attribute value
:error
================================================================================

<svg width=10/>

--------------------------------------------------------------------------------



================================================================================
Invalid valueless attribute
:error
================================================================================

<svg hidden></svg>

--------------------------------------------------------------------------------



================================================================================
Invalid XML declaration attribute order
:error
================================================================================

<?xml encoding="UTF-8" version="1.0"?>
<svg/>

--------------------------------------------------------------------------------



================================================================================
Invalid standalone declaration value
:error
================================================================================

<?xml version="1.0" standalone="maybe"?>
<svg/>

--------------------------------------------------------------------------------



================================================================================
Mismatched end tag name
================================================================================

<svg><g></svg></g>

--------------------------------------------------------------------------------

(source_file
  (text)
  root: (svg_root_element
    (svg_root_start_tag
      name: (name))
    (element
      (start_tag
        name: (name))
      (erroneous_end_tag
        name: (name)))
    (erroneous_end_tag
      name: (name)))
  (text))

================================================================================
Multiple root elements
:error
================================================================================

<svg/><svg/>

--------------------------------------------------------------------------------



================================================================================
DOCTYPE after root element
:error
================================================================================

<svg/>
<!DOCTYPE svg>

--------------------------------------------------------------------------------



================================================================================
XML declaration after root element
:error
================================================================================

<svg/>
<?xml version="1.0"?>

--------------------------------------------------------------------------------



================================================================================
Second XML declaration is invalid
:error
================================================================================

<?xml version="1.0"?>
<?xml version="1.0"?>
<svg/>

--------------------------------------------------------------------------------



================================================================================
Second doctype is invalid
:error
================================================================================

<!DOCTYPE svg>
<!DOCTYPE svg>
<svg/>

--------------------------------------------------------------------------------



================================================================================
Non-svg root element
:error
================================================================================

<g/>

--------------------------------------------------------------------------------



================================================================================
DOCTYPE before XML declaration
:error
================================================================================

<!DOCTYPE svg>
<?xml version="1.0"?>
<svg/>

--------------------------------------------------------------------------------



================================================================================
Invalid viewBox value
:error
================================================================================

<svg viewBox="0 0 100"></svg>

--------------------------------------------------------------------------------



================================================================================
Invalid preserveAspectRatio value
:error
================================================================================

<svg preserveAspectRatio="xFooBar meet"></svg>

--------------------------------------------------------------------------------



================================================================================
Invalid transform function arity
:error
================================================================================

<svg transform="matrix(1 0 0 1 0)"></svg>

--------------------------------------------------------------------------------



================================================================================
Invalid path command starts without moveto
:error
================================================================================

<svg><path d="L10 10"/></svg>

--------------------------------------------------------------------------------



================================================================================
Invalid path arc flag token
:error
================================================================================

<svg><path d="M0 0 A10 10 0 2 1 20 20"/></svg>

--------------------------------------------------------------------------------



================================================================================
Invalid script type for script element
:error
================================================================================

<svg><script type="application/json">x</script></svg>

--------------------------------------------------------------------------------



================================================================================
Invalid style type for style element
:error
================================================================================

<svg><style type="text/plain">.a{fill:red}</style></svg>

--------------------------------------------------------------------------------



================================================================================
Path disallows generic child element
:error
================================================================================

<svg><path><g/></path></svg>

--------------------------------------------------------------------------------



================================================================================
Shape disallows generic child element
:error
================================================================================

<svg><rect><g/></rect></svg>

--------------------------------------------------------------------------------
